GL/src/test/deca/context/invalid/deca_sans_objet/DoubleDefField.deca
// Description:
//    test objet fournit par le cahier de charge
//
// Resultats:
//    Ok
//
// Historique:
//    cree le 01/01/2026

class A {
    int x;
    float x;
}